<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="checkin">Check-in</string>
    <string name="checkin_successful">Checkin successful!</string>
    <string name="checkin_failed">Checkin failed!</string>
    <string name="search_nearby">"Search nearby</string>
    <string name="settings">Settings</string>
    <string name="google_play_services_connection_failed_with_resolution">Google Play Services Error: %s</string>
    <string name="places_checking_available">Places for checkin available</string>
    <string name="refresh">Refresh</string>
    <string name="do_you_want_make_checking">Do you really want to make a checkin on this place?</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="summary_notification_summary">If this is enabled, summary notification with nearby places is shown on phone\'s system bar as well, otherwise notification is shown on Android Wear device only</string>
    <string name="summary_notification_title">Show summary notification</string>
    <string name="passive_location_interval">Minimum update interval (minutes)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="no_venues">no venues available</string>
    <string name="minimum_displacement">Minimum displacement (meters)</string>
    <string name="automatic_notifications">Automatic notifications</string>
    <string name="automatic_notifications_summary">Application searches for places around you every time another application asks for position.</string>
    <string name="wear_for_swarm_needs_connect">Wear for Swarm needs to connect to Foursquare.</string>
    <string name="connect_to_foursquare">Connect</string>
    <string name="start_app">Start application\nWear for Swarm</string>
    <string name="go_to_menu">Go to wearable menu and select Start…</string>
    <string name="wait_few_seconds">Wait few seconds</string>
    <string name="select_place">Select actual place for check-in</string>
    <string name="wait_5_seconds">Wait 5 seconds to confirm check-in</string>
    <string name="facebook_share_title">Facebook</string>
    <string name="facebook_share_summary">Facebook must be enabled in third party connections.</string>
    <string name="twitter_share_title">Twitter</string>
    <string name="twitter_share_summary">Twitter must be enabled in third party connections.</string>
    <string name="share_checkins">Share checkins on other networks</string>

</resources>
