<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

        <io.seal.swarmwear.OneStepView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/wear_menu"
                app:text="@string/go_to_menu"
                app:number="1"/>

        <io.seal.swarmwear.OneStepView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/wear_start"
                app:text="@string/start_app"
                app:number="2"
                app:rightDirection="false"/>

        <io.seal.swarmwear.OneStepView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/wear_searching"
                app:text="@string/wait_few_seconds"
                app:number="3"/>

        <io.seal.swarmwear.OneStepView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/wear_venues"
                app:text="@string/select_place"
                app:number="4"
                app:rightDirection="false"/>

        <io.seal.swarmwear.OneStepView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/wear_confirmation"
                app:text="@string/wait_5_seconds"
                app:number="5"/>

    </LinearLayout>
</ScrollView>